fix(ui): Remove padding on episode item on mobile

--- a/src/ui/EpisodesList/EpisodeItem.module.css
+++ b/src/ui/EpisodesList/EpisodeItem.module.css
@@ -7,6 +7,12 @@
   height: 84px;
 }
 
+@media only screen and (max-width: 600px) {
+  .container {
+    padding: 0 16px 0 0;
+  }
+}
+
 .image {
   height: 84px;
   width: 84px;
